2018-02-11 Satya Panuganti <prakashsatya10@gmail.com>

-Modified code so that it can be run through a script

/************************************************************************/

2018-02-11 Satya Panuganti <prakashsatya10@gmail.com>

-Storing patches in .png format (loseless).
-code/tools/src/create_dictionary.cxx now creates dict128.png and dict256.png

/************************************************************************/

2018-02-11 Satya Panuganti <prakashsatya10@gmail.com>

-Changed patch size to 8x8.
-Added code/tools/src/niqe.py

/************************************************************************/

2018-02-11 Satya Panuganti <prakashsatya10@gmail.com>

-Added FOCUSS solver.
 Also made it possible to choose between different pursuit algorithms by
 the sparse inpaint class in code/algos/

/************************************************************************/

2018-02-10 Satya Panuganti <prakashsatya10@gmail.com>

-Fixed bug

/************************************************************************/

2018-02-10 Satya Panuganti <prakashsatya10@gmail.com>

-Removed GUI and other unnecessary files.

/************************************************************************/

2018-02-09 Satya Panuganti <prakashsatya10@gmail.com>

-Fixed bugs in code/algos/src/omp.cxx and code/algos/src/sparse_inpaint.cxx

/************************************************************************/

2018-02-08 Satya Panuganti <prakashsatya10@gmail.com>

-Removed create_dictionary binary file

/************************************************************************/

2018-02-08 Satya Panuganti <prakashsatya10@gmail.com>

-Modified GUI to deal with only grayscale images.
-Completed Inpainting via Sparse.
-Need to perform tests.

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Modified SparseInpaint class present in code/algos to load a dictionary
 from a path.